--- a/assets/package.json
+++ b/assets/package.json
@@ -3,14 +3,16 @@
     "version": "1.0.0",
     "description": "",
     "scripts": {
-        "dev": "wp-scripts start src/js/*.js",
-        "prod": "wp-scripts build src/js/*.js"
+        "dev": "wp-scripts start --webpack-src-dir=src --output-path=build",
+        "prod": "wp-scripts build --webpack-src-dir=src --output-path=build"
     },
     "keywords": [],
     "author": "",
     "license": "MIT",
     "dependencies": {
         "@wordpress/scripts": "^25.2.0",
-        "include-media": "^2.0.0"
+        "include-media": "^2.0.0",
+        "path": "^0.12.7",
+        "webpack-remove-empty-scripts": "^1.0.4"
     }
 }
